Adds some more authentication endpoints.  Starts replacing Claude UI with my own implementation using Material UI